# hackbook-rust

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  abi.proto  docker-compose.yaml  flake.nix  justfile  shell.nix  test.http
.cargo/: config
migrations/2025-03-04-132915_create_all_table/: down.sql  up.sql
nix/: config.toml  nivv  sources.json  sources.nix
scripts/: convert_to_epub  download_course_images  download_images  mark_course_done
scripts/crawler/: dao.py  fetch_geektime.py  fetch_lagou.py  main.py  tools.py
src/: errors.rs  handlers.rs  main.rs  models.rs  repo.rs  schema.rs  ws_server.rs  ws_session.rs
src/pb/: abi.rs  mod.rs
